--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">StarsWarsCitizen</string>
+
+    <!--Search screen-->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--Favourite screen-->
+
+
 </resources>
