--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,14 @@
 
     <!--Search screen-->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">search</string>
+    <string name="not_found">not found</string>
+    <string name="nothing_is_found">Nothing is found</string>
+    <string name="intro">intro</string>
+    <string name="intro_text">You haven\'t searched anything yet</string>
+    <string name="default_text">Default text</string>
+    <string name="add_to_favourite">add to favourite</string>
+    <string name="item_image">item image</string>
 
     <!--Favourite screen-->
 
