--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="model_field">Model:   %1$s</string>
     <string name="manufacturer_field">Manufacturer:   %1$s</string>
     <string name="passengers_field">Number of passengers:   %1$s</string>
+    <string name="search_title">Search</string>
+    <string name="settings">Settings</string>
+    <string name="favourite">Favourite</string>
 
 
     <!--Favourite screen-->
