--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="search_title">Search</string>
     <string name="settings">Settings</string>
     <string name="favourite">Favourite</string>
+    <string name="have_not_add_anything">You haven`t add anything to favourite yet</string>
 
 
     <!--Favourite screen-->
