--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,11 @@
     <string name="search_title">Search</string>
     <string name="settings">Settings</string>
     <string name="favourite">Favourite</string>
-    <string name="have_not_add_anything">You haven`t add anything to favourite yet</string>
+    <string name="toast_text">Input must be more than 2 characters</string>
 
 
     <!--Favourite screen-->
+    <string name="have_not_add_anything">You haven`t add anything to favourite yet</string>
 
 
 </resources>
